# lab04

formatter_ex_lib/: CMakeLists.txt
formatter_ex_lib/src/: formatter_ex.cpp
formatter_lib/: CMakeLists.txt
formatter_lib/src/: formatter.cpp  formatter.h
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_application/src/: equation.cpp
solver_lib/: CMakeLists.txt
solver_lib/src/: solver.cpp
